<resources>
    <string name="app_name">Chia bài ma sói</string>

    <!-- COMMON -->
    <string name="invalidNumberRoom">Số phòng không hợp lệ</string>
    <string name="invalidUsername">Tên không không được để trống</string>
    <string name="noInternetConnection">Không có kết nối mạng</string>
    <string name="serverInternalError">Something went wrong</string>
    <string name="loadingMessage">Đợi trong giây lát...</string>

    <!-- HOME ACTIVITY -->
    <string name="hintNumberRoom">Nhập số phòng</string>
    <string name="hintNameInRoom">Tên hiển thị</string>
    <string name="btnJoin">Vào phòng</string>
    <string name="btnCreateRoom">Tạo phòng</string>
    <string name="tipChooseHostRoom">Hoặc trở thành quản trò</string>

    <!-- CARD LIST -->
    <string name="btnConfirm">Xác nhận</string>


    <!-- IN ROOM -->
    <string name="btnStart">Bắt đầu</string>
    <string name="btnReady">Sẵn sàng</string>
    <string name="btnExit">Thoát</string>
    <string name="confirmExit">Bạn có muốn thoát khỏi phòng này?</string>
    <string name="verifyNumberCard">Bạn cần chọn ít nhất 2 thẻ để chơi</string>
    <string name="verifyNumberPlayer">Không có ai tham gia phòng\nHãy mời thêm bạn bè vào cùng chơi nào!</string>
    <string name="closeRoom">Chủ phòng đã thoát bạn hãy ra chọn phòng mới!</string>
    <string name="txtIntroduce"><i><u>Giới thiệu</u></i></string>
    <string name="introduce">\tKhông cần thẻ bài, bạn vẫn có thể chơi Ma sói cùng bạn bè mọi lúc, mọi nơi :)</string>
    <string name="txtShareNow">Chia sẻ ngay với bạn bè</string>
    <string name="introduce_platform">\tBạn có thể chơi trên nhiều nền tảng khác nhau: Android, iOS, Web.</string>
    <string name="txtSharePlease">\tHãy chia sẻ tới mọi người để cùng nhau chơi trò chơi thú vị này nhé ;)</string>
    <string name="isDied">đã chết</string>
    <string name="toundToOpendCard">Nhấn vào ảnh để mở/che bài</string>
</resources>
