<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbarInRoomActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Giới thiệu"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/introduce"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/introduce_platform"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/platform" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/padding_large"
        android:text="@string/txtSharePlease"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_share_now"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_medium"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:background="@drawable/bg_button_create_room"
        android:text="@string/txtShareNow"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>