<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="compathon.org.logan_android.activity.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarHomeActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="@dimen/button_width_large"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtNumberRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hintNumberRoom" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnJoinNow"
            android:layout_width="@dimen/button_width_medium"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btnJoin"/>
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btnCreateRoom"
        android:layout_width="@dimen/button_width_medium"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btnCreateRoom"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="@dimen/padding_medium"/>

</RelativeLayout>
